src/test/deca/extension/codegen/invalid/result/test_access_invalid_2d_output_expected.res
Error: table_dimension_are_not_respected
